# debukit

./: Cargo.toml  README.md
.github/workflows/: code_quality.yml  main.yml
src/: communicator.rs  dom.rs  lib.rs  main.rs  style.rs
testdata/: test1.html  test2.html
